--- a/User/UserInfo/UserInfo/Views/Shared/_Layout.cshtml
+++ b/User/UserInfo/UserInfo/Views/Shared/_Layout.cshtml
@@ -23,13 +23,13 @@
                 <li><a href="~/Distric">District Management</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                <li><a href="~/User/create"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
             </ul>
         </div>
     </nav>
 
-    <div class="container ">
+    <div class="body-content" style="margin-left:20px; margin-right:10px;">
         @RenderBody()
         <hr />
         <footer></footer>
