--- a/User/UserInfo/UserInfo/Views/Distric/Index.cshtml
+++ b/User/UserInfo/UserInfo/Views/Distric/Index.cshtml
@@ -4,36 +4,41 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<div class="col-lg-12">
+    <button class="btn pull-right" style="margin-bottom:5px;">
+        @Html.ActionLink("Create New", "Create")
+    </button>
+</div>
+<div class="row">
+    <div class="col-lg-12 ">
+        <table class="table table-striped">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Divition.Name)
+                </th>
+                <th></th>
+            </tr>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Divition.Name)
-        </th>
-        <th></th>
-    </tr>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Divition.Name)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.DistrictId }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.DistrictId }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.DistrictId })
+                    </td>
+                </tr>
+            }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Divition.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.DistrictId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.DistrictId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.DistrictId })
-        </td>
-    </tr>
-}
-
-</table>
+        </table>
+  </div>
+</div>
