--- a/User/UserInfo/UserInfo/Views/User/Edit.cshtml
+++ b/User/UserInfo/UserInfo/Views/User/Edit.cshtml
@@ -1,20 +1,22 @@
 ﻿@model UserInfo.ViewModel.vmUser
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
         <h4>UserInfo</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.UserId)
+
         <div class="form-group">
             @Html.LabelFor(model => model.FristName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -76,13 +78,6 @@
             </div>
         </div>
 
-        @*<div class="form-group">
-                @Html.LabelFor(model => model.DistrictId, "DistrictId", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownList("DistrictId", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.DistrictId, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.PresentAddress, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -118,7 +113,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
@@ -132,68 +127,48 @@
     @Scripts.Render("~/bundles/jqueryval")
 
     <script>
-        $('#DivitionId').change(function (event) {
+    $('#DivitionId').change(function (event) {
 
 
-            var Dvid = document.getElementById('DivitionId').value;
+        var Dvid = document.getElementById('DivitionId').value;
 
-            $.ajax({
+        $.ajax({
 
-                url: '@Url.Action("Dis", "User")',
+            url: '@Url.Action("Dis", "User")',
 
-                type: 'GET',
-                data: { 'id': Dvid },
-
-
-                success: function (result) {
-
-                    //  alert(jQuery.dataType);
-                    if (result) {
-                        console.log(result);
+            type: 'GET',
+            data: { 'id': Dvid },
 
 
+            success: function (result) {
 
-                        $('#DistrictId').empty();
-
-                        $.each(result, function (k, v) {
-                            //  console.log(k.Key);
-                            // console.log(v.Key);
-                            $('#DistrictId').append('<option value="' + v.Key + '">' + v.Value + '</option>');
-                        });
+                //  alert(jQuery.dataType);
+                if (result) {
+                    console.log(result);
 
 
 
-                    }
+                   $('#DistrictId').empty();
 
-                },
-                error: function () {
-                    alert("No");
+                    $.each(result, function (k, v) {
+                      //  console.log(k.Key);
+                       // console.log(v.Key);
+                        $('#DistrictId').append('<option value="' + v.Key + '">' + v.Value + '</option>');
+                    });
+
+
+
                 }
-            });
 
-
-
-
-
-            @**@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            @*alert("hit");
-       *@
+            },
+            error: function () {
+                alert("No");
+            }
         });
 
+
+    });
+
     </script>
+
 }
