--- a/User/UserInfo/UserInfo/Views/User/Index.cshtml
+++ b/User/UserInfo/UserInfo/Views/User/Index.cshtml
@@ -4,109 +4,180 @@
     ViewBag.Title = "User";
 }
 
-<h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<head>
+
+    <style>
+        #custom-search-input {
+            padding: 3px;
+            border: solid 1px #E4E4E4;
+            border-radius: 6px;
+            background-color: #fff;
+        }
+
+            #custom-search-input input {
+                border: 0;
+                box-shadow: none;
+            }
+
+            #custom-search-input button {
+                margin: 2px 0 0 0;
+                background: none;
+                box-shadow: none;
+                border: 0;
+                color: #666666;
+                padding: 0 8px 0 10px;
+                border-left: solid 1px #ccc;
+            }
+
+                #custom-search-input button:hover {
+                    border: 0;
+                    box-shadow: none;
+                    border-left: solid 1px #ccc;
+                }
+
+            #custom-search-input .glyphicon-search {
+                font-size: 23px;
+            }
+    </style>
+</head>
 
 
+<div class="col-lg-5 ">
+    <div class="col-xs-1 ">
+        </div>
+        <div class="col-xs-4 ">
+            <h2>User List</h2>
+        </div>
+</div>
 
-<table class="table table-striped">
-
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.FristName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UserName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Mobile)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.GenderId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PresentAddress)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastEducationalQulification)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Occupation)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateOFBirth)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.District.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Divition.Name)
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
+@*<div class="col-md-10 col-lg-10 col-sm-12">
+    @using (Html.BeginForm("Index", "User", FormMethod.Get))
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FristName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Mobile)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GenderId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PresentAddress)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastEducationalQulification)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Occupation)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DateOFBirth)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.District.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Divition.Name)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.UserId }) |
-                @Html.ActionLink("Details", "Details", new { id = item.UserId }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.UserId })
-            </td>
-        </tr>
+
+
+
+        <div class="input-group col-md-12">
+
+            <input type="text" name="SearchText" id="SearchText" class="form-control" value="@Model.SearchText" placeholder="ANY TEXT" />
+            <span class="input-group-btn">
+                <button class="btn btn-info btn-md" type="submit" value="Show">Search</button>
+            </span>
+
+        </div>
+
+
     }
+</div>*@
 
-</table>
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-<script>
+    <div class="col-lg-12">
+        <button class="btn pull-right" style="margin-bottom:5px;">
+            @Html.ActionLink("Create New", "Create")
+        </button>
+    </div>
+<div class="row">
+    <div class="col-lg-12 ">
+
+        <table class="table table-bordered table-responsive">
+
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.FristName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.LastName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.UserName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Email)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Mobile)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.GenderId)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.PresentAddress)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.LastEducationalQulification)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Occupation)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DateOFBirth)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.District.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Divition.Name)
+                </th>
+                <th>Action</th>
+            </tr>
+
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FristName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.UserName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Mobile)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.GenderId)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PresentAddress)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastEducationalQulification)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Occupation)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DateOFBirth)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.District.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Divition.Name)
+                    </td>
+                    <td>
+
+
+                        @Html.ActionLink("Edit", "Edit", new { id = item.UserId }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.UserId }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.UserId })
+                    </td>
+                </tr>
+            }
+
+        </table>
+    </div>
+
+</div>
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+        <script>
 
 
 
-    </script>
-}
+        </script>
+    }
