--- a/User/UserInfo/UserInfo/Views/User/Index.cshtml
+++ b/User/UserInfo/UserInfo/Views/User/Index.cshtml
@@ -40,6 +40,9 @@
                 font-size: 23px;
             }
     </style>
+  
+    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://cdn.datatables.net/1.10.2/css/jquery.dataTables.min.css">
 </head>
 
 
@@ -78,7 +81,7 @@
 <div class="row">
     <div class="col-lg-12 ">
 
-        <table class="table table-bordered table-responsive">
+        <table id="myTable" class="display table" width="100%">
 
             <tr>
                 <th>
@@ -174,10 +177,13 @@
 
 </div>
     @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-        <script>
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.18/datatables.min.css" />
 
-
-
-        </script>
+<script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.18/datatables.min.js"></script>
+<script src="~/Scripts/bootstrap.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#myTable').dataTable();
+    });
+</script>
     }
